# FolderSync

./: CMakeLists.txt  FolderSync.hpp  LICENSE  README.md  main.cpp  main_general_tool.cpp  main_this_tool.cpp
sample_folder/dst/: cvconfig.h
sample_folder/源/例程/: Readme.txt  VC6.0.rar
sample_folder/目标/例程/: C#.rar
sample_folder/目标/动态库及头文件/: LTDMC.cs
sample_folder/目标_副本/动态库及头文件/: dll_20201216_1010.rar
